# TabletDriver

./: .gitignore  Cargo.toml  Cross.toml  GEMINI.md  LICENSE  README.md  build.rs  bump_version.ps1  installer.iss  payload.json  rust-toolchain.toml  rustfmt.toml
.agents/: GEMINI.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: clippy.yml  codeql.yml  release.yml  security.yml
scripts/: 99-nexttabletdriver.rules  README-linux.md
src/: lib.rs  logger.rs  main.rs  startup.rs  telemetry.rs
src/app/: autoupdate.rs  lifecycle.rs  mod.rs  state.rs  update.rs  websocket.rs
src/core/config/: models.rs
src/core/math/: geometry.rs  transform.rs
src/domain/: mod.rs
src/drivers/: config.rs  generic.rs  mod.rs
src/drivers/parsers/: fallback.rs  mod.rs  skip_byte.rs
src/drivers/parsers/acepen/: mod.rs
src/drivers/parsers/bosto/: mod.rs
src/drivers/parsers/floogoo/: mod.rs
src/drivers/parsers/genius/: mod.rs
src/drivers/parsers/huion/: inspiroy.rs  mod.rs
src/drivers/parsers/lifetec/: mod.rs
src/drivers/parsers/robotpen/: mod.rs
src/drivers/parsers/tenmoon/: mod.rs
src/drivers/parsers/uclogic/: mod.rs
src/drivers/parsers/veikk/: generic.rs
src/drivers/parsers/viewsonic/: mod.rs
src/drivers/parsers/wacom/: bamboo.rs  bamboo_pad.rs  bamboo_v2.rs  cintiq_v1.rs  graphire.rs  intuos.rs  intuos3.rs  intuos4.rs  intuos_pro.rs  intuos_v1.rs  intuos_v2.rs  intuos_v3.rs  misc.rs  mod.rs  pl.rs  ptu.rs
src/drivers/parsers/wacom/bamboo/: mod.rs
src/drivers/parsers/wacom/intuos/: mod.rs
src/drivers/parsers/xencelabs/: mod.rs
src/drivers/parsers/xenx/: mod.rs
src/drivers/parsers/xp_pen/: extended.rs  mod.rs  standard.rs  star_g640.rs
src/engine/: injector.rs  mod.rs  pipeline.rs  state.rs  tablet_manager.rs
src/filters/: antichatter.rs  mod.rs  stats.rs
src/input/: mod.rs
src/settings/: mod.rs
src/ui/: mod.rs  theme.rs
src/ui/components/: footer.rs  menu_bar.rs  mod.rs  tabs.rs  update_dialog.rs
src/ui/panels/: console.rs  debugger.rs  developer.rs  filters.rs  mod.rs  output.rs  pen_settings.rs  performance.rs  release.rs  settings.rs  support.rs  tools.rs
src/ui/panels/filters/: antichatter.rs  mod.rs  stats.rs
src/ui/panels/output/: display.rs  mod.rs  relative.rs  tablet.rs
tablets/Genius/: i608x.json
tablets/Huion/: 420.json  GT-220 V2.json  H1061P.json  H420.json  L310.json
tablets/Lifetec/: LT9570.json
tablets/Monoprice/: MP1060-HA60.json
tablets/Parblo/: A640 V2.json  A640.json  Intangbo S.json  Ninos M.json  Ninos N7.json  Ninos N7B.json  Ninos S.json
tablets/RobotPen/: T9A.json
tablets/VEIKK/: A15 V2.json  VK430.json
tablets/Wacom/: CTE-460.json
tablets/XP-Pen/: Artist 15.6 Pro V2.json  Deco 02.json  Deco LW.json  Star G640 (Variant 2).json  Star G640S.json
