[package]
name = "next_tablet_driver"
authors = ["iSweat"]
description = "Tablet Driver for Osu! and Drawing"
version = "1.1.0"
edition = "2024"
rust-version = "1.93.1"

[dependencies]
# Windows & Linux
hidapi = "2.6.3"
eframe = "0.33.3"
display-info = "0.5.9"
enigo = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22.1"
directories = "6.0.0"
rfd = "0.17.2"
log = "0.4"
chrono = "0.4"
egui_extras = "0.33.3"
egui-phosphor = "0.11"
crossbeam-channel = "0.5.15"
include_dir = "0.7"
tungstenite = { version = "0.29.0" }
ureq = { version = "2.12.1", features = ["json"] }
catppuccin-egui = { version = "5.7.0", default-features = false, features = ["egui33"] }
tray-icon = "0.22.2"
image = { version = "0.25.10", default-features = false, features = ["png"] }

# Windows
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_Security", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_Media", "Win32_System_LibraryLoader"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

# Linux
[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.13"
nix = { version = "0.29", features = ["sched", "fs"] }
libc = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
